--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
       <a href="analyzer.html">Open Tool</a>
     </div>
 
+    <div class="tool-card">
+  <h2>Unit Converter (MM ↔ Inch)</h2>
+  <p>Convert between millimeters and inches.</p>
+  <a href="converter.html">Open Tool</a>
+    </div>
+
+    
+
     <!-- Add more tool cards here later -->
   </div>
 </body>
