--- a/analyzer.html
+++ b/analyzer.html
@@ -39,6 +39,6 @@
   <div id="groupContainer"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
-  <script src="script.js"></script>
+  <script src="analyzer.js"></script>
 </body>
 </html>
