--- a/converter.html
+++ b/converter.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Unit Converter</title>
-  <!-- Reuse your existing CSS -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="converter.css">
 </head>
 <body>
   <div class="container">
@@ -23,7 +22,7 @@
     <a href="index.html">← Back to Home</a>
   </div>
 
-  <!-- Reuse existing JS or add new logic -->
+  
   <script>
     function convertMmToInch() {
       const mm = parseFloat(document.getElementById("mmInput").value);
