--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
   <div class="container">
     <h1>Welcome to My Engineering Tools</h1>
-    <p>Explore the tools I've built:</p>
+    <p>Engineering tools::</p>
 
     <div class="tool-card">
       <h2>Heidenhain NC File Analyzer</h2>
-      <p>Analyze NC program files for operations, tools, and feedrates.</p>
+      <p>Analyze DMG Heidenhain NC program files for operations, tools, and feedrates.</p>
       <a href="analyzer.html">Open Tool</a>
     </div>
 
