--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1>Welcome to My Engineering Tools</h1>
-    <p>Engineering tools::</p>
+    <p>Engineering tools:</p>
 
     <div class="tool-card">
       <h2>Heidenhain NC File Analyzer</h2>
