--- a/analyzer.html
+++ b/analyzer.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NC Program Analyzer</title>
+  <title>DMG Heidenhain NC Program Analyzer</title>
   <link rel="stylesheet" href="analyzer.css">
 </head>
 <body>
-  <h1>Heidenhain NC File Analyzer</h1>
+  <h1>DMG Heidenhain NC File Analyzer</h1>
   <div class="file-input-wrapper">
   <input type="file" id="fileInput" accept="*/*">
   </div><br>
