--- a/analyzer.html
+++ b/analyzer.html
@@ -5,11 +5,11 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DMG Heidenhain NC Program Analyzer</title>
-  <title>Rev: 03</title>
   <link rel="stylesheet" href="analyzer.css">
 </head>
 <body>
   <h1>DMG Heidenhain NC File Analyzer</h1>
+  <p>Rev: 03</p>
   <div class="file-input-wrapper">
   <input type="file" id="fileInput" accept="*/*">
   </div><br>
