--- a/analyzer.html
+++ b/analyzer.html
@@ -10,6 +10,8 @@
 <body>
   <h1>DMG Heidenhain NC File Analyzer</h1>
   <p>Rev: 03</p>
+  <div>Build: 001</div>
+  <small>Mode: Test</small>
   <div class="file-input-wrapper">
   <input type="file" id="fileInput" accept="*/*">
   </div><br>
