--- a/analyzer.html
+++ b/analyzer.html
@@ -11,7 +11,7 @@
   <h1>DMG Heidenhain NC File Analyzer</h1>
   <p>Rev: 03</p>
   <div>Build: 001</div>
-  <small>Mode: Test</small>
+  <p><small>Mode: Test</small><p>
   <div class="file-input-wrapper">
   <input type="file" id="fileInput" accept="*/*">
   </div><br>
