--- a/analyzer.html
+++ b/analyzer.html
@@ -14,6 +14,7 @@
   <p><small>Mode: Test</small><p>
   <div class="file-input-wrapper">
   <input type="file" id="fileInput" accept="*/*">
+<div id="fileNameDisplay" class="file-name-display">No file selected</div>
   </div><br>
   
   <div class="file-stats">
