--- a/analyzer.html
+++ b/analyzer.html
@@ -12,9 +12,12 @@
   <p>Rev: 004</p>
   <div>Build: 001</div>
   <p><small>Mode: Test</small><p>
-  <div class="file-input-wrapper">
+
+<div class="file-input-wrapper">
   <input type="file" id="fileInput" accept="*/*">
-<div id="fileNameDisplay" class="file-name-display">No file selected</div>
+  <div id="fileNameDisplay" class="file-name-display">No file selected</div>
+</div>
+
   </div><br>
   
   <div class="file-stats">
