--- a/analyzer.html
+++ b/analyzer.html
@@ -9,12 +9,12 @@
 </head>
 <body>
   <h1>DMG Heidenhain NC File Analyzer</h1>
-  <p>Rev: 005</p>
+  <p>Rev: 006</p>
   <div>Build: 001</div>
   <p><small>Mode: Test</small><p>
 
 <div class="file-input-wrapper">
-  <input type="file" id="fileInput" accept="*/*">
+  <input type="file" id="fileInput" accept="*/*"style="display: block;" >
   <div id="fileNameDisplay" class="file-name-display">No file selected</div>
 </div>
 
