--- a/analyzer.html
+++ b/analyzer.html
@@ -14,7 +14,7 @@
   <p><small>Mode: Test</small><p>
 
 <div class="file-input-wrapper">
-  <input type="file" id="fileInput" accept="*/*"style="display: block;" >
+  <input type="file" id="fileInput" accept="*/*">
   <div id="fileNameDisplay" class="file-name-display">No file selected</div>
 </div>
 
