--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
       <a href="analyzer.html">Open Tool</a>
     </div>
 
+
+
+    <div class="tool-card">
+      <h2>Cutting Speed</h2>
+      <p>Find cutting speed</p>
+      <a href="speed.html">Open Tool</a>
+    </div>
+
+
     <div class="tool-card">
   <h2>Unit Converter (MM ↔ Inch)</h2>
   <p>Convert between millimeters and inches.</p>
