--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="tool-card">
       <h2>Cutting Speed</h2>
       <p>Find cutting speed</p>
-      <a href="speed.html">Open Tool</a>
+      <a href="speed-turn.html">Open Tool</a>
     </div>
 
 
