--- a/speed-turn.html
+++ b/speed-turn.html
@@ -6,7 +6,7 @@
     <title>Cutting Speed Calculator</title>
   
 
-<link rel="stylesheet" href="speed.css">
+<link rel="stylesheet" href="speed-turn.css">
 
 </head>
 <body>
@@ -54,7 +54,7 @@
         </div>
     </div>
 
-  <script src="speed.js"></script>
+  <script src="speed-turn.js"></script>
 
 
 </body>
