--- a/speed-turn.html
+++ b/speed-turn.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cutting Speed Calculator</title>
+    <title>Turning Cutting Speed Calculator</title>
   
 
 <link rel="stylesheet" href="speed-turn.css">
@@ -11,8 +11,8 @@
 </head>
 <body>
 
-  <h1>Cutting Speed Calculator</h1>
-  <p>Rev: 001</p>
+  <h1>Turning Cutting Speed Calculator</h1>
+  <p>Rev: 002</p>
 
     <div class="calculator-container">
         <div class="formula-side">
