--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
     <div class="tool-card">
-      <h2>Cutting Speed</h2>
+      <h2>Turning Cutting Speed</h2>
       <p>Find cutting speed</p>
       <a href="speed-turn.html">Open Tool</a>
     </div>
