--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
       <a href="analyzer.html">Open Tool</a>
     </div>
 
+    
+    <div class="tool-card">
+      <h2>Milling Cutting Speed</h2>
+      <p>Find cutting speed</p>
+      <a href="speed-mill.html">Open Tool</a>
+    </div>
 
 
     <div class="tool-card">
