--- a/speed-mill.html
+++ b/speed-mill.html
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <h1>Milling Cutting Speed Calculator</h1>
-        <p class="revision">Rev: 004</p>
+        <p class="revision">Rev: 005</p>
     </div>
 
     <div class="calculator-container">
@@ -31,7 +31,7 @@
         <div class="calculator-content">
             <div class="input-group">
                 <div class="radio-group">
-                    <input type="radio" id="calc-n" name="calc-type" checked>
+                    <input type="radio" id="calc-n" name="calc-type">
                     <label for="calc-n">Calculate n</label>
                 </div>
                 <div class="input-wrapper">
@@ -53,7 +53,7 @@
             
             <div class="input-group">
                 <div class="radio-group">
-                    <input type="radio" id="calc-vc" name="calc-type">
+                    <input type="radio" id="calc-vc" name="calc-type" checked>
                     <label for="calc-vc">Calculate vc</label>
                 </div>
                 <div class="input-wrapper">
