--- a/speed-mill.html
+++ b/speed-mill.html
@@ -13,11 +13,15 @@
 <body>
     <div class="header">
         <h1>Milling Cutting Speed Calculator</h1>
-        <p class="revision">Rev: 006</p>
+        <p class="revision">Rev: 007</p>
     </div>
 
     <div class="calculator-container">
         <div class="formula-side">
+            <!-- Add this image container above the formula display -->
+            <div class="formula-image">
+                <img src="speed-mill-1.gif" alt="Milling Diagram" style="max-width: 100%; height: auto;">
+            </div>
             <div class="formula-display">
                 \[ vc = \frac{\pi \cdot D \cdot n}{1000} \, (m/min) \]
                 <div class="variable-defs">
@@ -28,6 +32,7 @@
             </div>
         </div>
         
+        <!-- Rest of your HTML remains the same -->
         <div class="calculator-content">
             <div class="input-group">
                 <div class="radio-group">
