--- a/speed-turn.html
+++ b/speed-turn.html
@@ -13,13 +13,13 @@
 <body>
     <div class="header">
         <h1>Turning Cutting Speed Calculator</h1>
-        <p class="revision">Rev: 001</p>
+        <p class="revision">Rev: 002</p>
     </div>
 
     <div class="calculator-container">
         <div class="formula-side">
             <div class="formula-image">
-                <img src="speed-turn-1.gif" alt="Turning Diagram" style="max-width: 100%; height: auto;">
+                <img src="speed-turn-1.jpg" alt="Turning Diagram" style="max-width: 100%; height: auto;">
             </div>
             <div class="formula-display">
                 \[ vc = \frac{\pi \cdot D \cdot n}{1000} \, (m/min) \]
