--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
     </div>
 
 
+    
+    <div class="tool-card">
+      <h2>Milling Feed Per Tooth</h2>
+      <p>Find feed per tooth</p>
+      <a href="feed-tooth-mill.html">Open Tool</a>
+    </div>
+
+
+
+    
     <div class="tool-card">
       <h2>Turning Cutting Speed</h2>
       <p>Find cutting speed</p>
