--- a/feed-tooth-mill.html
+++ b/feed-tooth-mill.html
@@ -18,8 +18,11 @@
 
     <div class="calculator-container">
         <div class="formula-side">
-               <div class="formula-image">
-                <img src="feed-tooth-mill-1.gif" alt="Milling Diagram 2" style="max-width: 100%; height: auto;">
+            <div class="formula-image">
+                <img src="feed-tooth-mill-1.gif" alt="Milling Diagram 1" style="max-width: 100%; height: auto;">
+            </div>
+            <div class="formula-image">
+                <img src="feed-tooth-mill-2.gif" alt="Milling Diagram 2" style="max-width: 100%; height: auto;">
             </div>
             <div class="formula-display">
                 \[ fz = \frac{vf}{z \cdot n} \, (mm/tooth) \]
