--- a/milling-calculator.html
+++ b/milling-calculator.html
@@ -19,8 +19,15 @@
     <div class="calculator-container">
         <div class="formula-side">
             <div class="formula-image">
-                <img src="speed-mill-1.gif" alt="Milling Diagram" style="max-width: 100%; height: auto;">
+                <img src="milling-calculator-1.gif" alt="Milling Diagram 1" style="max-width: 100%; height: auto;">
             </div>
+            <div class="formula-image">
+                <img src="milling-calculator-2.gif" alt="Milling Diagram 2" style="max-width: 100%; height: auto;">
+            </div>
+            <div class="formula-image">
+                <img src="milling-calculator-3.gif" alt="Milling Diagram 3" style="max-width: 100%; height: auto;">
+            </div>
+            
             <div class="formula-display">
                 \[ vc = \frac{\pi \cdot D \cdot n}{1000} \, (m/min) \]
                 <div class="variable-defs">
