Update and rename speed-turn.html to turn-vc.html

--- a/turn-vc.html
+++ b/turn-vc.html
@@ -13,13 +13,13 @@
 <body>
     <div class="header">
         <h1>Turning Cutting Speed Calculator</h1>
-        <p class="revision">Rev: 003</p>
+        <p class="revision">Rev: 004</p>
     </div>
 
     <div class="calculator-container">
         <div class="formula-side">
             <div class="formula-image">
-                <img src="speed-turn-1.jpg" alt="Turning Diagram" style="max-width: 100%; height: auto;">
+                <img src="turn-vc-1.jpg" alt="Turning Diagram" style="max-width: 100%; height: auto;">
             </div>
             <div class="formula-display">
                 \[ vc = \frac{\pi \cdot D \cdot n}{1000} \, (m/min) \]
@@ -74,6 +74,6 @@
         </div>
     </div>
 
-    <script src="speed-turn.js"></script>
+    <script src="turn-vc.js"></script>
 </body>
 </html>
