--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="tool-card">
       <h2>Turning Cutting Speed</h2>
       <p>Find cutting speed</p>
-      <a href="speed-turn.html">Open Tool</a>
+      <a href="turn-vc.html">Open Tool</a>
     </div>
 
 
