--- a/turn-vc.html
+++ b/turn-vc.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Calculate turning cutting speed (vc) for machining operations">
     <title>Turning Cutting Speed Calculator</title>
-    <link rel="stylesheet" href="speed-turn.css">
+    <link rel="stylesheet" href="turn-vc.css">
     <!-- MathJax for formula rendering -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <h1>Turning Cutting Speed Calculator</h1>
-        <p class="revision">Rev: 004</p>
+        <p class="revision">Rev: 005</p>
     </div>
 
     <div class="calculator-container">
@@ -68,7 +68,7 @@
             <button id="calculate-btn">Calculate</button>
             
             <div class="note">
-                * π (Pi) = 3.141592653589793<br>
+                * π (Pi) = 3.14<br>
                 * This calculator is for reference only. Actual results may vary based on cutting conditions.
             </div>
         </div>
