--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="tool-card">
       <h2>Milling Cutting Speed</h2>
       <p>Find cutting speed</p>
-      <a href="speed-mill.html">Open Tool</a>
+      <a href="mill-vc.html">Open Tool</a>
     </div>
 
 
