--- a/mill-vc.html
+++ b/mill-vc.html
@@ -19,7 +19,7 @@
     <div class="calculator-container">
         <div class="formula-side">
             <div class="formula-image">
-                <img src="mill-vc-1.jpg" alt="Milling Diagram" style="max-width: 100%; height: auto;">
+                <img src="mill-vc-1.gif" alt="Milling Diagram" style="max-width: 100%; height: auto;">
             </div>
             <div class="formula-display">
                 \[ vc = \frac{\pi \cdot D \cdot n}{1000} \, (m/min) \]
