Update and rename feed-tooth-mill.html to mill-fz.html

--- a/mill-fz.html
+++ b/mill-fz.html
@@ -13,16 +13,16 @@
 <body>
     <div class="header">
         <h1>Feed per Tooth Calculator</h1>
-        <p class="revision">Rev: 002</p>
+        <p class="revision">Rev: 003</p>
     </div>
 
     <div class="calculator-container">
         <div class="formula-side">
             <div class="formula-image">
-                <img src="feed-tooth-mill-1.gif" alt="Milling Diagram 1" style="max-width: 100%; height: auto;">
+                <img src="mill-fz-1.gif" alt="Milling Diagram 1" style="max-width: 100%; height: auto;">
             </div>
             <div class="formula-image">
-                <img src="feed-tooth-mill-2.gif" alt="Milling Diagram 2" style="max-width: 100%; height: auto;">
+                <img src="mill-fz-2.gif" alt="Milling Diagram 2" style="max-width: 100%; height: auto;">
             </div>
             <div class="formula-display">
                 \[ fz = \frac{vf}{z \cdot n} \, (mm/tooth) \]
@@ -88,6 +88,6 @@
         </div>
     </div>
 
-    <script src="feed-tooth-mill.js"></script>
+    <script src="mill-fz.js"></script>
 </body>
 </html>
