--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="tool-card">
       <h2>Milling Feed Per Tooth</h2>
       <p>Find feed per tooth</p>
-      <a href="feed-tooth-mill.html">Open Tool</a>
+      <a href="mill-fz.html">Open Tool</a>
     </div>
 
     
