--- a/mill-fz.html
+++ b/mill-fz.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Calculate feed per tooth (fz) for machining operations">
     <title>Feed per Tooth Calculator</title>
-    <link rel="stylesheet" href="feed-tooth-mill.css">
+    <link rel="stylesheet" href="mill-fz.css">
     <!-- MathJax for formula rendering -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <h1>Feed per Tooth Calculator</h1>
-        <p class="revision">Rev: 003</p>
+        <p class="revision">Rev: 004</p>
     </div>
 
     <div class="calculator-container">
