Update and rename milling-calculator.html to mill-param.html

--- a/mill-param.html
+++ b/mill-param.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Calculate milling cutting parameters including speed and feed per tooth">
     <title>Milling Cutting Parameter Calculator</title>
-    <link rel="stylesheet" href="milling-calculator.css">
+    <link rel="stylesheet" href="mill-param.css">
     <!-- MathJax for formula rendering -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -13,19 +13,19 @@
 <body>
     <div class="header">
         <h1>Milling Cutting Parameter Calculator</h1>
-        <p class="revision">Rev: 004</p>
+        <p class="revision">Rev: 005</p>
     </div>
 
     <div class="calculator-container">
         <div class="formula-side">
             <div class="formula-image">
-                <img src="milling-calculator-1.gif" alt="Milling Diagram 1" style="max-width: 100%; height: auto;">
+                <img src="mill-param-1.gif" alt="Milling Diagram 1" style="max-width: 100%; height: auto;">
             </div>
             <div class="formula-image">
-                <img src="milling-calculator-2.gif" alt="Milling Diagram 2" style="max-width: 100%; height: auto;">
+                <img src="mill-param-2.gif" alt="Milling Diagram 2" style="max-width: 100%; height: auto;">
             </div>
             <div class="formula-image">
-                <img src="milling-calculator-3.gif" alt="Milling Diagram 3" style="max-width: 100%; height: auto;">
+                <img src="mill-param-3.gif" alt="Milling Diagram 3" style="max-width: 100%; height: auto;">
             </div>
             
             <div class="formula-display">
@@ -125,6 +125,6 @@
         </div>
     </div>
 
-    <script src="milling-calculator.js"></script>
+    <script src="mill-param.js"></script>
 </body>
 </html>
