--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="tool-card">
       <h2>Milling Calculator</h2>
       <p>Find cutting parameter</p>
-      <a href="milling-calculator.html">Open Tool</a>
+      <a href="mill-param.html">Open Tool</a>
     </div>
 
     
