--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
     </div>
 
 
+    
+    <div class="tool-card">
+      <h2>Turning Feed</h2>
+      <p>Find turning feed</p>
+      <a href="turn-f.html">Open Tool</a>
+    </div>
+
 
 
   </div>
