--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@
       <a href="turn-f.html">Open Tool</a>
     </div>
 
-
+    
+    <div class="tool-card">
+      <h2>Turning Calculator</h2>
+      <p>Find cutting parameter</p>
+      <a href="turn-param.html">Open Tool</a>
+ 
 
   </div>
 </body>
