--- a/turn-param.html
+++ b/turn-param.html
@@ -19,10 +19,10 @@
     <div class="calculator-container">
         <div class="formula-side">
             <div class="formula-image">
-                <img src="turn-param-1.jpg" alt="Turning Diagram" style="max-width: 100%; height: auto;">
+                <img src="turn-param-1.jpg" alt="Turning Diagram" style="width: auto; height: 100px;">
             </div>
               <div class="formula-image">
-                <img src="turn-param-2.jpg" alt="Turning Diagram" style="max-width: 100%; height: auto;">
+                <img src="turn-param-2.jpg" alt="Turning Diagram" style="width: auto; height: 100px;">
             </div>
             <div class="formula-display">
                 <div class="formula-section">
