--- a/index.html
+++ b/index.html
@@ -66,7 +66,19 @@
       <h2>Turning Calculator</h2>
       <p>Find cutting parameter</p>
       <a href="turn-param.html">Open Tool</a>
- 
+
+
+    
+    <div class="tool-card">
+      <h2>Turning Cycle Time Calculator</h2>
+      <p>Find machining time</p>
+      <a href="turn-ct.html">Open Tool</a>
+    </div>
+
+
+
+
+      
 
   </div>
 </body>
