--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       <h2>Turning Calculator</h2>
       <p>Find cutting parameter</p>
       <a href="turn-param.html">Open Tool</a>
+    </div>
 
 
     
@@ -75,12 +76,8 @@
       <a href="turn-ct.html">Open Tool</a>
     </div>
 
-
-
-
-      
-
   </div>
+
 </body>
 </html>
 </html>
