--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
       <a href="turn-ct.html">Open Tool</a>
     </div>
 
+
+    
+    <div class="tool-card">
+      <h2>Turning Surface Roughness</h2>
+      <p>Find surface roughess Ra</p>
+      <a href="turn-ra.html">Open Tool</a>
+    </div>
+
+
+
+    
   </div>
 
 </body>
