--- a/index.html
+++ b/index.html
@@ -46,6 +46,19 @@
       <a href="mill-ct.html">Open Tool</a>
     </div>
 
+
+
+
+    
+    <div class="tool-card">
+      <h2>Ballnose Effective Diameter</h2>
+      <p>Find ballnose effective diameter</p>
+      <a href="mill-ball-dia.html">Open Tool</a>
+    </div>
+
+
+
+
     
     <div class="tool-card">
       <h2>Turning Cutting Speed</h2>
