--- a/mill-ball-dia.html
+++ b/mill-ball-dia.html
@@ -11,13 +11,13 @@
 <body>
     <div class="header">
         <h1>Effective Ballnose Diameter Calculator</h1>
-        <div class="revision">Rev: 001</div>
+        <div class="revision">Rev: 002</div>
     </div>
 
     <div class="calculator-container">
         <div class="formula-side">
             <div class="formula-image">
-                <img src="mill-ball-dia-1.webp" alt="Effective Ballnose Diameter Formula" style="max-width: 100%; height: auto;">
+                <img src="mill-ball-dia-1.jpg" alt="Effective Ballnose Diameter Formula" style="max-width: 100%; height: auto;">
             </div>
             <div class="math-wrapper">
                 <div class="formula-display">
