--- a/mill-bull-dia.html
+++ b/mill-bull-dia.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header">
         <h1>Bullnose Effective Diameter Calculator</h1>
-        <div class="revision">Rev: 001</div>
+        <div class="revision">Rev: 002</div>
     </div>
 
     <div class="calculator-container">
@@ -79,7 +79,10 @@
 
             <div class="note">
                 * This calculator provides theoretical values only. Actual effective diameter may vary based on cutting conditions and tool geometry.<br>
-                ** ADOC must be ≤ 2×Corner Radius for valid results.
+                ** ADOC must be ≤ Corner Radius for valid results.
+                ** All values must positive numbers
+                ** r must be ≤ D/2 for valid results
+                ** Deff must be less than D for valid results
             </div>
         </div>
     </div>
