--- a/mill-ball-dia-tilt.html
+++ b/mill-ball-dia-tilt.html
@@ -20,7 +20,7 @@
 <body>
     <div class="header">
         <h1>Tilted Ballnose Effective Diameter Calculator</h1>
-        <div class="revision">Rev: 001</div>
+        <div class="revision">Rev: 002</div>
     </div>
 
     <div class="calculator-container">
@@ -31,6 +31,17 @@
             <div class="formula-display">
                 \( D_{eff} = d \cdot \sin\left(\beta + \arccos\left(1 - \frac{2 \cdot ap}{d}\right)\right) \)
             </div>
+
+            <div class="formula-display">
+                     \( ap = \frac{d}{2} \cdot \left(1 - \left(\sqrt{1 - \left(\frac{D_{eff}}{d}\right)^2} \cdot \cos(\beta) + \frac{D_{eff}}{d} \cdot \sin(\beta)\right)\right) \)
+            </div>
+            <div class="formula-display">
+                \( \beta = \arcsin\left(\frac{D_{eff}}{d}\right) - \arccos\left(1 - \frac{2 \cdot ap}{d}\right) \)
+            </div>
+            <div class="formula-display">
+                \( d \approx \frac{D_{eff}}{\sin\left(\beta + \arccos\left(1 - \frac{2 \cdot ap}{d}\right)\right)} \) (Iterative solution recommended)
+            </div>
+            
             <div class="variable-defs">
                 \( D_{eff} \): Effective Diameter (mm)<br>
                 \( d \): Nominal Diameter (mm)<br>
