--- a/index.html
+++ b/index.html
@@ -14,11 +14,20 @@
     <div class="section">
       <h2 class="section-title">NC PROGRAM</h2>
       <div class="tools-grid">
+
+        
         <div class="tool-card">
           <h3>Heidenhain NC File Analyzer</h3>
           <p>Analyze DMG Heidenhain NC program files</p>
           <a href="analyzer.html">Open</a>
         </div>
+
+        <div class="tool-card">
+          <h3>Mazak EIA NC File Analyzer</h3>
+          <p>Analyze Mazak EIA NC program files</p>
+          <a href="analyzer-eia.html">Open</a>
+        </div>
+        
       </div>
     </div>
 
