--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
           <a href="analyzer-eia.html">Open</a>
         </div>
         
+        <div class="tool-card">
+          <h3>Fanuc NC File Analyzer</h3>
+          <p>Analyze Fanuc NC program files</p>
+          <a href="analyzer-fanuc.html">Open</a>
+        </div>
+
+
+        
       </div>
     </div>
 
