--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
           <a href="analyzer-fanuc.html">Open</a>
         </div>
 
+        
+        <div class="tool-card">
+          <h3>Siemens NC File Analyzer</h3>
+          <p>Analyze Siemens NC program files</p>
+          <a href="analyzer-siemens.html">Open</a>
+        </div>
 
         
       </div>
