--- a/index.html
+++ b/index.html
@@ -125,9 +125,24 @@
           <h3>Surface Roughness</h3>
           <p>Find surface roughness Ra</p>
           <a href="turn-ra.html">Open</a>
-        </div>
+        </div>      
       </div>
     </div>
+
+    <!-- Excel Section -->
+    <div class="section">
+      <h2 class="section-title">TURNING</h2>
+      <div class="tools-grid">
+        <div class="tool-card">
+          <h3>Excel Joiner</h3>
+          <p>Join Multiple Tooling Lists</p>
+          <a href="excel-join.html">Open</a>
+        </div>    
+      </div>
+    </div>
+
+
+    
   </div>
 </body>
         </html>
