--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <!-- Excel Section -->
     <div class="section">
-      <h2 class="section-title">TURNING</h2>
+      <h2 class="section-title">EXCEL</h2>
       <div class="tools-grid">
         <div class="tool-card">
           <h3>Excel Joiner</h3>
