--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
         </div>
 
 
+        
+        <div class="tool-card">
+          <h3>Nc Simulator</h3>
+          <p>Simulate G-code Toolpath</p>
+          <a href="nc-sim.html">Open</a>
+        </div>
 
+ 
 
         
         <div class="tool-card">
