--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         
         <div class="tool-card">
-          <h3>Nc Simulator</h3>
+          <h3>NC Simulator</h3>
           <p>Simulate G-code Toolpath</p>
           <a href="nc-sim.html">Open</a>
         </div>
