--- a/nc-sim.html
+++ b/nc-sim.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <h1>NC Toolpath Simulator</h1>
-  <p>Rev: 058</p>
+  <div>Rev: 099</div>
 
   <div class="file-input-wrapper">
     <input type="file" id="fileInput">
-    <span id="fileNameDisplay">No file selected</span>
+    <span class="file-name-display" id="fileNameDisplay">No file selected</span>
   </div>
 
   <div class="file-stats">
@@ -31,30 +31,32 @@
     <textarea id="contentTextarea"></textarea>
   </div>
 
-  <div class="scale-controls">
-    <label for="scaleSelect">Scale:</label>
-    <select id="scaleSelect">
-      <option value="0.001">0.001</option>
-      <option value="0.01">0.01</option>
-      <option value="0.1">0.1</option>
-      <option value="1" selected>1</option>
-      <option value="10">10</option>
-      <option value="100">100</option>
-      <option value="1000">1000</option>
-    </select>
-    <button id="applyScaleBtn">Apply Scale</button>
+  <div class="zoom-controls">
+    <button id="zoomInBtn">+</button>
+    <button id="zoomOutBtn">-</button>
+    <button id="homeBtn">🏠</button>
+    <button id="fitBtn">FIT</button>
   </div>
 
-  <div class="controls">
-    <label for="arrowToggle">Show Arrows: </label>
-    <input type="checkbox" id="arrowToggle">
+  <div class="zoom-controls">
+    <button id="panUpBtn">↑</button>
+    <button id="panDownBtn">↓</button>
+    <button id="panLeftBtn">←</button>
+    <button id="panRightBtn">→</button>
   </div>
+
+  <div class="checkbox-controls">
+    <label><input type="checkbox" id="arrowToggle"> Show Arrows</label>
+    <label><input type="checkbox" id="drawRangeToggle"> Draw Range</label>
+    <label><input type="checkbox" id="drawBoundToggle"> Draw Bound</label>
+  </div>
+
+  <div id="rangesDiv"></div>
+  <div id="warningsDiv"></div>
 
   <div class="canvas-wrapper">
-    <canvas id="toolpathCanvas" width="800" height="600"></canvas>
+    <canvas id="toolpathCanvas"></canvas>
   </div>
-
-  <div id="warningsDiv"></div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
   <script type="module" src="js/main.js"></script>
