Replace nc-sim with latest full version from nc-sim-248-m6-ok

--- a/tools/nc_program/nc-sim/nc-sim.html
+++ b/tools/nc_program/nc-sim/nc-sim.html
@@ -9,7 +9,7 @@
 <body>
   <div class="content-wrapper">
     <h2>NC Toolpath Simulator</h2>
-    <p>Rev: 244</p>
+    <p>Rev: 248</p>
     <div class="input-wrapper">
       <input type="file" id="fileInput">
       <div class="file-name-display" id="fileNameDisplay">No file selected</div>
@@ -89,7 +89,8 @@
             </thead>
             <tbody>
               <tr><td>Feed (F)</td><td id="feedValue">0.000</td></tr>
-              <tr><td>Spindle Speed (S)</td><td id="speedValue">0.000</td></tr>
+              <tr><td>Spindle (S)</td><td id="speedValue">0.000</td></tr>
+              <tr><td>Tool</td><td id="toolValue">T00</td></tr>
             </tbody>
           </table>
         </div>
@@ -133,4 +134,4 @@
   </div>
   <script type="module" src="nc-sim.js"></script>
 </body>
-  </html>
+</html>
