--- a/index.html
+++ b/index.html
@@ -154,6 +154,25 @@
         </div>    
       </div>
     </div>
+
+
+    <!-- Web Section -->
+    <div class="section">
+      <h2 class="section-title">WEB</h2>
+      <div class="tools-grid">
+        <div class="tool-card">
+          <h3>Fast Search</h3>
+          <p>Fast searxh for web app</p>
+          <a href="tools/excel/excel-join/websearch.html">Open</a>
+        </div>    
+      </div>
+    </div>
+
+
+
+
+    
+    
   </div>
 </body>
   </html>
