--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
       <div class="tools-grid">
         <div class="tool-card">
           <h3>Fast Search</h3>
-          <p>Fast searxh for web app</p>
-          <a href="tools/excel/excel-join/websearch.html">Open</a>
+          <p>Fast search for web app</p>
+          <a href="tools/search/websearch.html">Open</a>
         </div>    
       </div>
     </div>
